--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <script src="script.js"></script>
-    <script src="MyClass.js"></script>
+    <script src="Sprite.js"></script>
   </body>
 </html>
